created global cache for building data mappers